overflow fixed

--- a/css/components/start-using.css
+++ b/css/components/start-using.css
@@ -7,6 +7,7 @@
   position: relative;
   text-align: center;
   width: 100%;
+  overflow: hidden;
 }
 
 .start-using .decor-line {
